tests/snapshots/snapshots__heatmap_single_row.snap
---
source: tests/snapshots.rs
expression: buffer_to_string(&buf)
---
┌ 1D profile ────────────────┐
│░░░░░▒▒▒            █7.0    │
│                    █       │
│                    █       │
│                    █       │
│                    █0.0    │
│0 ... 7                     │
└────────────────────────────┘
