tests/snapshots/snapshots__heatmap_small.snap
---
source: tests/snapshots.rs
expression: buffer_to_string(&buf)
---
┌ SST ───────────────────────┐
│░░░░░░              █23.0   │
│░░░░░░              █       │
│▒▒▒▒▒▒              █       │
│▒▒▒▒▒▒              █       │
│                    █       │
│                    █       │
│                    █0.0    │
│0 ... 5                     │
└────────────────────────────┘
