tests/snapshots/snapshots__heatmap_uniform.snap
---
source: tests/snapshots.rs
expression: buffer_to_string(&buf)
---
┌ Uniform ───────────────────┐
│▒▒▒▒▒▒              █42.0   │
│▒▒▒▒▒▒              █       │
│▒▒▒▒▒▒              █       │
│▒▒▒▒▒▒              █       │
│                    █       │
│                    █       │
│                    █42.0   │
│0 ... 5                     │
└────────────────────────────┘
