tests/snapshots/snapshots__heatmap_with_coords.snap
---
source: tests/snapshots.rs
expression: buffer_to_string(&buf)
---
┌ SST (coords) ──────────────┐
│░░░░░░              █23.0   │
│░░░░░░              █       │
│▒▒▒▒▒▒              █       │
│▒▒▒▒▒▒              █       │
│                    █       │
│                    █       │
│                    █0.0    │
│0 … 300                     │
└────────────────────────────┘
