tests/snapshots/snapshots__heatmap_with_nan.snap
---
source: tests/snapshots.rs
expression: buffer_to_string(&buf)
---
┌ SST (with NaN) ────────────┐
│░░░░░░              █23.0   │
│░░░░░░              █       │
│▒▒▒▒▒▒              █       │
│▒▒▒▒▒▒              █       │
│                    █       │
│                    █       │
│                    █0.0    │
│0 ... 5                     │
└────────────────────────────┘
