tests/snapshots/snapshots__histogram_degenerate.snap
---
source: tests/snapshots.rs
expression: buffer_to_string(&buf)
---
┌ Histogram (10 bins, n=80) ─────────────────────┐
│                    █                           │
│                    █                           │
│                    █                           │
│                    █                           │
│                    █                           │
│                    █                           │
│                    █                           │
│                    █                           │
│                    █                           │
│                    █                           │
│                    █                           │
│                    █                           │
│────────────────────────────────────────────────│
│6.5                  7.0                7.5     │
└────────────────────────────────────────────────┘
