tests/snapshots/snapshots__histogram_few_bins.snap
---
source: tests/snapshots.rs
expression: buffer_to_string(&buf)
---
┌ Histogram (4 bins, n=100) ─────────────────────┐
│█           █           █           █           │
│█           █           █           █           │
│█           █           █           █           │
│█           █           █           █           │
│█           █           █           █           │
│█           █           █           █           │
│█           █           █           █           │
│█           █           █           █           │
│█           █           █           █           │
│█           █           █           █           │
│█           █           █           █           │
│█           █           █           █           │
│────────────────────────────────────────────────│
│0.0                  49.5               99.0    │
└────────────────────────────────────────────────┘
