tests/snapshots/snapshots__histogram_normal.snap
---
source: tests/snapshots.rs
expression: buffer_to_string(&buf)
---
┌ Histogram (12 bins, n=200) ──────────────────────────────┐
│                                            █             │
│█                                           █             │
│█                                           █             │
│█                                           █             │
│█                                           █             │
│█                                           █             │
│█                                           █             │
│█                                           █             │
│█                                           █             │
│█   █                                   █   █             │
│█   █                   █           █   █   █             │
│█   █   █   █           █   █   █   █   █   █             │
│█   █   █   █   █   █   █   █   █   █   █   █             │
│█   █   █   █   █   █   █   █   █   █   █   █             │
│█   █   █   █   █   █   █   █   █   █   █   █             │
│█   █   █   █   █   █   █   █   █   █   █   █             │
│──────────────────────────────────────────────────────────│
│-100.0                    -0.0                    100.0   │
└──────────────────────────────────────────────────────────┘
