tests/snapshots/snapshots__line_plot_basic.snap
---
source: tests/snapshots.rs
assertion_line: 288
expression: buffer_to_string(&buf)
---
┌ signal [time] ───────────────────────────────────────────┐
│9.99 │     ⣀⠤⠤⡀                        ⣀⠤⠤⡀               │
│     │   ⢠⠊   ⠈⢢                     ⡠⠊   ⠑⡄              │
│     │  ⢠⠃      ⠱⡀                  ⡰⠁     ⠈⢢             │
│     │ ⢀⠎        ⢱                 ⡰⠁        ⢣            │
│     │⢀⠎          ⢣               ⢠⠃          ⢇           │
│     │⡜            ⢣             ⢠⠃           ⠘⡄          │
│0.01 │              ⢣           ⢀⠎             ⠘⡄         │
│     │               ⡇         ⢀⠎               ⠱⡀        │
│     │               ⠘⡄        ⡜                 ⠱⡀       │
│     │                ⠘⡄      ⡜                   ⠱⡀     ⢀│
│     │                 ⠘⢄⡀  ⡠⠊                     ⠑⢄⡀ ⢀⡠⠃│
│-9.96│                   ⠈⠉⠉                         ⠈time│
│     └────────────────────────────────────────────────────│
│     0                       19.50                      39│
└──────────────────────────────────────────────────────────┘
