tests/snapshots/snapshots__line_plot_with_coords.snap
---
source: tests/snapshots.rs
assertion_line: 299
expression: buffer_to_string(&buf)
---
┌ profile [lat] ─────────────────────────────────┐
│10│                ⢀⠔⠢⢄⣀                        │
│  │              ⢀⠔⠁    ⠉⠑⠢⠤⣀                   │
│  │             ⡰⠁           ⠉⠢⡀                │
│  │           ⡠⠊               ⠈⠢⡀              │
│  │         ⡠⠊                   ⠘⢄             │
│5 │       ⡠⠊                       ⠑⢄           │
│  │     ⡠⠊                           ⠑⠤⣀        │
│  │   ⢀⠔⠁                               ⠉⠑⠢⢄⣀   │
│  │ ⢀⠔⠁                                      ⠉⠒ │
│0 │⠐⠁                                        lat│
│  └─────────────────────────────────────────────│
│-90                      0                    90│
└────────────────────────────────────────────────┘
