tests/snapshots/snapshots__line_plot_with_nan.snap
---
source: tests/snapshots.rs
assertion_line: 309
expression: buffer_to_string(&buf)
---
┌ sparse [x] ────────────────────────────────────┐
│5│                           ⢀⡠⠔⠒⠤⣀             │
│ │                       ⢀⡠⠔⠊⠁     ⠉⠒⠤⢄⡀        │
│ │                   ⣀⠤⠒⠉⠁             ⠈⠑⠢⠤⣀    │
│ │              ⢀⣀⠤⠒⠉                       ⠉⠒⠤⣀│
│3│          ⢀⡠⠔⠊⠁                               │
│ │      ⣀⠤⠔⠊⠁                                   │
│ │  ⣀⠤⠒⠉                                        │
│1│⠒⠉                                           x│
│ └──────────────────────────────────────────────│
│ 0                      3                      6│
└────────────────────────────────────────────────┘
