tests/snapshots/snapshots__search_bar_active_query.snap
---
source: tests/snapshots.rs
expression: buffer_to_string(&buf)
---
┌ Search ──────────────────────────────┐
│ /temp (1 match)█                     │
└──────────────────────────────────────┘
